# Y86-Simulator

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  test.py  untitled1.pro  widget.cpp  widget.h  widget.ui
answer/: abs-asum-cmov  abs-asum-jmp  asum  asumi  asumr  cjr  j-cc  poptest  prog1  prog10  prog2  prog3  prog4  prog5  prog6  prog7  prog8  prog9  pushquestion  pushtest  ret-hazard
include/: CPU.h  fifo_map.hpp  json.hpp  memory.h  utils.h
src/: CPU.cpp  Makefile  PC_update.cpp  control.cpp  decode.cpp  execute.cpp  fetch.cpp  forward.cpp  main.cpp  memory.cpp  memory_access.cpp  pass_params.cpp  write_back.cpp
